fix 3rd line on mobile

--- a/app/assets/stylesheets/shapes-red.css
+++ b/app/assets/stylesheets/shapes-red.css
@@ -2299,6 +2299,11 @@ a.btn-theme:focus{
     line-height:36px;
 }
 
+.jumbotron .third-line p{
+    font-size:24px;
+    line-height:28px;
+}
+
 h1.section-title{
     font-size:32px;
     line-height:46px;
